--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.3.1",
+    "webcola": "~3.0.1"
   }
 }
