--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.3.4",
     "jquery": "~2.1.1",
     "bootstrap": "~3.3.1",
-    "webcola": "~3.0.1"
+    "webcola": "~3.0.1",
+    "d3": "~3.4.13"
   }
 }
